--- a/WebApiRest/WebApiRest.csproj
+++ b/WebApiRest/WebApiRest.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Data\Conexion.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Data\RegistroData.cs" />
+    <Compile Include="Data\UsuarioData.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
